CRUD operations * implemented category CRUD operations * implemented manufacturer CRUD operations * implemented warehouse CRUD operations
